# awesome-date-dimension

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  test.py
.github/workflows/: black.yaml
awesome_date_dimension/: config.py  tsql.py
generate/: columns.py  holidays.py  script_generatior.py  script_generator_factory.py
generate/tsql_generator/: tsql_generator.py
src/awesome_date_dimension/: config.py  tsql.py
t-sql/01-setup/: 01-DimDateTableDef.sql  04-HolidayTypesTableDef.sql  05-HolidaysTableDef.sql
t-sql/02-initial-build/: 01-InsertHolidayTypes.sql
t-sql/03-refresh-procs/: 01-sp_build_DimDate.sql  02-sp_build_DimFiscalMonth.sql
t-sql/04-table-constraints/: 01-DimDateConstraints.sql  02-DimFiscalMonth.sql  05-manual_Holidays.sql
tests/files/: default_company_holidays.pickle  default_config.pickle  default_dim_calendar_month_columns.pickle  default_dim_calendar_month_config.pickle  default_dim_date_columns.pickle  default_dim_date_config.pickle  default_dim_fiscal_month_columns.pickle  default_dim_fiscal_month_config.pickle  default_holiday_config.pickle  default_holiday_types_columns.pickle  default_holidays_columns.pickle  default_us_public_holidays.pickle
tests/test_config/: test_config.py  test_config_factory.py  test_daterange.py  test_dimcalendarmonthcolumns.py  test_dimcalendarmonthconfig.py  test_dimdatecolumns.py  test_dimdateconfig.py  test_dimfiscalmonthcolumns.py  test_dimfiscalmonthconfig.py  test_fiscalconfig.py  test_holiday_calendars.py  test_holidaycolumns.py  test_holidayconfig.py  test_holidaytype.py  (+1 more)
(+34 files in other folders)
