[metadata]
name = awesome_date_dimension
version = 0.0.1
author = S. Elliott Johnson
author_email = sejohnson@torchcloudconsulting.com
description = Generate an awesome date dimension in your chosen format, complete with many common options.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tcc-sejohnson/awesome-date-dimension
project_urls =
    Bug Tracker = https://github.com/tcc-sejohnson/awesome-date-dimension/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src